[gd_scene load_steps=12 format=3 uid="uid://dwlcqmqkqnhma"]

[ext_resource type="FontFile" uid="uid://dxl1vm7aodpvi" path="res://assets/Fonts/polar/PolarSnow2.ttf" id="1_dvvqo"]
[ext_resource type="Texture2D" uid="uid://clejaal2yjv3o" path="res://assets/botoes/Pannel.png" id="1_o4t3g"]
[ext_resource type="Script" uid="uid://cnmowr7trqpc2" path="res://scripts/loby_02.gd" id="1_wj38i"]
[ext_resource type="PackedScene" uid="uid://baelgfaeel8p2" path="res://scenes/back_ground_loby.tscn" id="2_ontmj"]
[ext_resource type="FontFile" uid="uid://dj7yafnlopmlo" path="res://assets/Fonts/polar/SnowHut.ttf" id="3_1rpp0"]
[ext_resource type="Texture2D" uid="uid://cs468qi6l7o6k" path="res://assets/botoes/g58.png" id="4_vdui6"]
[ext_resource type="Texture2D" uid="uid://bws2o2x8a2l5e" path="res://assets/botoes/g59.png" id="5_8u6bm"]
[ext_resource type="AudioStream" uid="uid://c00pnhyqgarhq" path="res://assets/outros/Clement Panchout _ Fluttering in the Sun _ (The GodMOTHer).wav" id="6_8vd6o"]
[ext_resource type="AudioStream" uid="uid://c2d4i1tvfeqvd" path="res://assets/outros/FastUiSoundsSFX/SFX_FastUiClickMetal05.wav" id="7_gaxv2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8u6bm"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
texture = ExtResource("4_vdui6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8vd6o"]
texture = ExtResource("5_8u6bm")

[node name="Loby_02" type="Node2D"]
script = ExtResource("1_wj38i")

[node name="BackGroundLoby" parent="." instance=ExtResource("2_ontmj")]
position = Vector2(250, 180)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 477.0
offset_bottom = 268.0

[node name="Sprite2D" type="Sprite2D" parent="Control"]
modulate = Color(1, 1, 1, 0.966)
position = Vector2(121.5, 124.50169)
scale = Vector2(0.22963803, 0.22963804)
texture = ExtResource("1_o4t3g")

[node name="BoxContainer" type="BoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.5
offset_top = -101.0
offset_right = -37.5
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.646029, 0.646029, 0.64602923, 0.8745098)
theme_override_fonts/font = ExtResource("1_dvvqo")
theme_override_font_sizes/font_size = 24
text = "Polar Assaut"

[node name="Label5" type="Label" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 6

[node name="BtnStart" type="Button" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1rpp0")
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxTexture_8u6bm")
theme_override_styles/hover = SubResource("StyleBoxTexture_8vd6o")
text = "Iniciar"

[node name="BtnRanking" type="Button" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1rpp0")
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxTexture_8u6bm")
theme_override_styles/hover = SubResource("StyleBoxTexture_8vd6o")
text = "Ranking"

[node name="BtnFull" type="Button" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1rpp0")
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxTexture_8u6bm")
theme_override_styles/hover = SubResource("StyleBoxTexture_8vd6o")
text = "Tela Cheia"

[node name="Label3" type="Label" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 6

[node name="BtnSair" type="Button" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1rpp0")
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxTexture_8u6bm")
theme_override_styles/hover = SubResource("StyleBoxTexture_8vd6o")
text = "Sair"

[node name="Label4" type="Label" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 6

[node name="Label2" type="Label" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "v0.1.1 Alfa"

[node name="bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8vd6o")
volume_db = -15.0
autoplay = true

[node name="ui_efect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_gaxv2")

[connection signal="pressed" from="Control/BoxContainer/VBoxContainer/BtnStart" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="Control/BoxContainer/VBoxContainer/BtnRanking" to="." method="_on_btn_ranking_pressed"]
[connection signal="pressed" from="Control/BoxContainer/VBoxContainer/BtnFull" to="." method="_on_btn_full_pressed"]
[connection signal="pressed" from="Control/BoxContainer/VBoxContainer/BtnSair" to="." method="_on_btn_sair_pressed"]
